<resources>
    <string name="app_name">Gifts of Chaos</string>
    <string name="action_settings">Settings</string>
    <string name="nothing_found">No cheeses found</string>
    <string name="search">search</string>
    <string name="search_title">Suche PLACEHOLDER</string>


    <string name="matze_tile_title">Unit List</string>
    <string name="cheese_tile_title">Cheese Finder</string>

    <string name="remove_unit">Remove</string>
    <string name="edit_unit">Edit</string>
    <string name="unit_name_hint">Unit Name</string>
    
    <string name="lesser_gift">Lesser Gift</string>
    <string name="middle_gift">Middle Gift</string>
    <string name="greater_gift">Greater Gift</string>
    <string name="mastery_level">Mastery Level</string>
    
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    
    <string name="create_new_unit">Create</string>
</resources>
