<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:text="@string/zero"
        style="@style/NumberTextView"
        android:id="@+id/textView_mastery_level_zero" />

    <TextView
        android:text="@string/one"
        style="@style/NumberTextView"
        android:id="@+id/textView_mastery_level_one" />

    <TextView
        android:text="@string/two"
        style="@style/NumberTextView"
        android:id="@+id/textView_mastery_level_two"
     />

    <TextView
        android:text="@string/three"
        style="@style/NumberTextView"
        android:id="@+id/textView_mastery_level_three" />
</LinearLayout>