<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create_new_unit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="de.dortmund.fh.jung.myproject.create.unit.CreateNewUnitActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/unit_name_hint"
        android:gravity="center"
        android:id="@+id/unitNameInputField"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1" />

    <ImageView
        android:layout_width="176dp"
        android:layout_height="176dp"
        app:srcCompat="@android:drawable/ic_menu_camera"
        android:id="@+id/create_new_unit_imageView"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/unitNameInputField"
        android:layout_marginStart="24dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline"
        app:layout_constraintGuide_begin="144dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="144dp" />
    <TextView
        android:text="@string/mastery_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView_masteryLevelLabel"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toBottomOf="@+id/imageButton"
        app:layout_constraintRight_toLeftOf="@+id/guideline"
        android:layout_marginEnd="8dp" />
    <TextView
        android:text="@string/greater_gift"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView_greater_gift_label"
        app:layout_constraintLeft_toLeftOf="@+id/textView_masteryLevelLabel"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/textView_masteryLevelLabel"
        app:layout_constraintRight_toRightOf="@+id/textView_masteryLevelLabel" />
    <TextView
        android:text="@string/midle_gift"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView_midle_gift_label"
        app:layout_constraintRight_toRightOf="@+id/textView_masteryLevelLabel"
        app:layout_constraintLeft_toLeftOf="@+id/textView_masteryLevelLabel"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/textView_greater_gift_label"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1" />

    <TextView
        android:text="@string/lesser_gift"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView_lesserGiftLabel"
        app:layout_constraintRight_toRightOf="@+id/textView_masteryLevelLabel"
        app:layout_constraintLeft_toLeftOf="@+id/textView_masteryLevelLabel"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/textView_midle_gift_label" />

    <ImageButton
        android:layout_width="55dp"
        android:layout_height="55dp"
        app:srcCompat="@drawable/nurgle"
        android:id="@+id/imageButton"
        android:scaleType="fitCenter"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/imageButton3"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <ImageButton
        android:layout_width="55dp"
        android:layout_height="55dp"
        app:srcCompat="@drawable/nurgle"
        android:id="@+id/imageButton4"
        android:scaleType="fitCenter"
        app:layout_constraintRight_toLeftOf="@+id/create_new_unit_imageView"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="46dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/imageButton2"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toRightOf="@+id/imageButton" />

    <ImageButton
        android:layout_width="55dp"
        android:layout_height="55dp"
        app:srcCompat="@drawable/nurgle"
        android:id="@+id/imageButton3"
        android:scaleType="fitCenter"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/unitNameInputField" />

    <ImageButton
        android:layout_width="55dp"
        android:layout_height="55dp"
        app:srcCompat="@drawable/khorne"
        android:id="@+id/imageButton2"
        android:scaleType="fitCenter"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toRightOf="@+id/imageButton3"
        app:layout_constraintTop_toTopOf="@+id/imageButton3"
        app:layout_constraintRight_toLeftOf="@+id/create_new_unit_imageView"
        android:layout_marginEnd="46dp" />

    <include
        android:id="@+id/mastery_level_numbers"
        android:layout_width="wrap_content"
        layout="@layout/row_numbers_layout"
        app:layout_constraintRight_toRightOf="@+id/create_new_unit_imageView"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/create_new_unit_imageView"
        android:layout_height="34dp"
        app:layout_constraintLeft_toLeftOf="@+id/create_new_unit_imageView"
        android:layout_marginEnd="16dp" />

    <include
        android:id="@+id/greater_gifts_numbers"
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        layout="@layout/row_gifts_number_layout"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textView_masteryLevelLabel"
        app:layout_constraintLeft_toLeftOf="@+id/mastery_level_numbers" />

    <include
        android:id="@+id/midle_gifts_numbers"
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        layout="@layout/row_gifts_number_layout"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/greater_gifts_numbers"
        app:layout_constraintLeft_toLeftOf="@+id/mastery_level_numbers" />

    <include
        android:id="@+id/lesser_gifts_numbers"
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        layout="@layout/row_gifts_number_layout"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/midle_gifts_numbers"
        app:layout_constraintLeft_toLeftOf="@+id/mastery_level_numbers" />


</android.support.constraint.ConstraintLayout>
